added filter search in tags api
