# server/api/controllers/tags/router.js
@@ -3,4 +3,4 @@ import controller from './controller';
 
 export default express
   .Router()
-  .get('/', controller.all)
+  .get('/:tag_name', controller.all)
